--- a/auditorium/package.json
+++ b/auditorium/package.json
@@ -13,14 +13,17 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-big-calendar": "^1.11.2",
+    "react-big-calendar": "^1.11.6",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "the": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
