--- a/auditorium/package.json
+++ b/auditorium/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
